# project_3A

./: .coveragerc  CHANGELOG.md  Dockerfile  README.md  pyproject.toml
app/: main.py  test_main.py
app/entities/: sentiment_analysis.py  topic_classification.py
app/services/sentiment_analysis/: LR_model.sav  main.py  tfidf.sav
app/services/topic_classification/: LR_model.sav  main.py  tfidf.sav
