[tool.poetry]
name = "project_3A"
version = "0.1.0"
description = ""
authors = ["Adrien Brunet <adrien@may-sante.com>"]

[tool.poetry.dependencies]
python = "^3.7"
uvicorn = "^0.11.8"
fastapi = "^0.61.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
pytest-mypy = "^0.7.0"
pytest-sugar = "^0.9.4"
pytest-cov = "^2.10.1"
requests = "^2.24.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
